<resources>
    <string name="app_name">HRST</string>
    <string name="no_interner_texr">No internet connections found. Check your connection or try again</string>
    <string name="internetTxt">Checking if Internet Connectivity is Back or Not.......</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n"
    </string>
    <string name="error_msg">Error Message</string>
    <string name="title">Title</string>
    <string name="RETRY">RETRY</string>
    <string name="email_id">Email Id</string>
    <string name="email_mobile">Email Id or Mobile No</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="sendOtp">Send OTP</string>
    <string name="verifyOtp">Verify OTP</string>
    <string name="name">Name</string>
    <string name="father_name">Your Father Name</string>
    <string name="alernate_mobile_no">Alernate Mobile Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="bank_account_name">Bank Account Name</string>
    <string name="submit_details">Submit Details</string>
    <string name="upload_aadhar">Upload Aadhar</string>
    <string name="ifsc_code">IFSC Code</string>
    <string-array name="invalid_mobile">
        <item>9999999999</item>
        <item>8888888888</item>
        <item>7777777777</item>
        <item>6666666666</item>
    </string-array>
    <string-array name="stateList">
        <item>Andaman &amp; Nicobar</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhatisgarh</item>
        <item>Dadra Nagarhaveli</item>
        <item>Daman &amp; Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="no_skill_list">
        <item>Cleaner/Janitor</item>
        <item>Parking Lot Attendant</item>
        <item>Fast Food Worker</item>
        <item>Line Operator</item>
        <item>Messenger</item>
        <item>Sewing Machine Operator</item>
        <item>Construction Labourer</item>
        <item>Vegetable Harvester/Picker</item>
        <item>Factory Worker</item>
        <item>Farm Worker</item>
        <item>Grocery Clerk</item>
        <item>Elevator Installer</item>
        <item>Lift Attendant</item>
        <item>Landscapers</item>
        <item>Masonry Worker</item>
        <item>Tree Trimmer</item>
        <item>Veterinary Assistant</item>
        <item>Maid</item>
        <item>Information Desk Clerk</item>
        <item>Helper</item>
    </string-array>
    <string-array name="semi_skill_list">
        <item>Retail Salesperson</item>
        <item>Telephone Solicitor</item>
        <item>Waiter/Waitress</item>
        <item>Bartender</item>
        <item>Flight Attendant</item>
        <item>Taxi Driver</item>
        <item>Laundry Operator</item>
        <item>Nurse Assistant</item>
        <item>Furniture Mover</item>
        <item>File Clerk</item>
        <item>Fisher Man</item>
        <item>Sorter/Checker</item>
        <item>Bhattiwala</item>
        <item>Typist</item>
        <item>Bill Man</item>
        <item>Clerk</item>
    </string-array>
    <string name="edu_lbl_continue">Continue</string>
    <string name="edu_hint_your_password">Your Password</string>
    <string name="edu_hint_your_email">Your Email</string>
    <string name="edu_info_login">Enter your login details to \n  access your account</string>
    <string name="edu_lbl_forgot">Forgot</string>
    <string name="edu_info_mobile">Enter your mobile number </string>
    <string name="edu_lbl_i_didn_t_receive_a_code">I didn\'t receive a code</string>
    <string name="edu_lbl_resend">Resend</string>
    <string name="edu_hint_first_name">Your First Name</string>
    <string name="edu_hint_last_name">Your Last Name</string>
    <string name="edu_lbl_save_profile">Save Profile</string>
    <string name="edu_hint_your_mobile">Mobile Number</string>
    <string name="_91">+91</string>
    <string name="_0">0</string>
    <string name="your_email">Your Email Id</string>
</resources>